[gd_scene load_steps=7 format=2]

[ext_resource path="res://Art/game_over.jpg" type="Texture" id=1]
[ext_resource path="res://Art/UI/button_small.png" type="Texture" id=2]
[ext_resource path="res://font/kirbyss.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Scripts/TextureButton.gd" type="Script" id=4]
[ext_resource path="res://Scripts/GameOverMenu.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
size = 70
font_data = ExtResource( 3 )

[node name="GameOver" type="TextureRect"]
margin_left = -1.50659
margin_top = 0.342804
margin_right = 1022.49
margin_bottom = 600.343
texture = ExtResource( 1 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSplitContainer" type="HSplitContainer" parent="."]
margin_left = 32.1459
margin_top = 335.8
margin_right = 940.146
margin_bottom = 568.8
rect_scale = Vector2( 0.5, 0.5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" type="TextureButton" parent="HSplitContainer"]
margin_right = 448.0
margin_bottom = 233.0
texture_normal = ExtResource( 2 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
normal_color = Color( 0.87451, 0.87451, 0.87451, 1 )
focus_color = Color( 1, 1, 1, 1 )
pressed_color = Color( 0.870588, 0.894118, 1, 1 )

[node name="RichTextLabel" type="RichTextLabel" parent="HSplitContainer/TextureButton"]
margin_left = 51.0
margin_top = 50.0
margin_right = 387.0
margin_bottom = 186.0
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "[center]Try Again[/center]"
text = "Try Again"

[node name="TextureButton2" type="TextureButton" parent="HSplitContainer"]
modulate = Color( 0.87451, 0.87451, 0.87451, 1 )
margin_left = 460.0
margin_right = 908.0
margin_bottom = 233.0
texture_normal = ExtResource( 2 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
normal_color = Color( 0.87451, 0.87451, 0.87451, 1 )
focus_color = Color( 1, 1, 1, 1 )
pressed_color = Color( 0.870588, 0.894118, 1, 1 )

[node name="RichTextLabel2" type="RichTextLabel" parent="HSplitContainer/TextureButton2"]
margin_left = 60.3496
margin_top = 82.3008
margin_right = 396.35
margin_bottom = 164.301
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "[center]Quit[/center]"
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Container" type="Container" parent="."]
margin_right = 40.0
margin_bottom = 40.0
[connection signal="button_down" from="HSplitContainer/TextureButton" to="HSplitContainer/TextureButton" method="_on_TextureButton_button_down"]
[connection signal="button_up" from="HSplitContainer/TextureButton" to="." method="_on_TextureButton_button_up"]
[connection signal="button_up" from="HSplitContainer/TextureButton" to="HSplitContainer/TextureButton" method="_on_TextureButton_button_up"]
[connection signal="focus_entered" from="HSplitContainer/TextureButton" to="HSplitContainer/TextureButton" method="_on_TextureButton_focus_entered"]
[connection signal="focus_exited" from="HSplitContainer/TextureButton" to="HSplitContainer/TextureButton" method="_on_TextureButton_focus_exited"]
[connection signal="button_down" from="HSplitContainer/TextureButton2" to="HSplitContainer/TextureButton2" method="_on_TextureButton_button_down"]
[connection signal="button_up" from="HSplitContainer/TextureButton2" to="." method="_on_TextureButton2_button_up"]
[connection signal="button_up" from="HSplitContainer/TextureButton2" to="HSplitContainer/TextureButton2" method="_on_TextureButton_button_up"]
[connection signal="focus_entered" from="HSplitContainer/TextureButton2" to="HSplitContainer/TextureButton2" method="_on_TextureButton_focus_entered"]
[connection signal="focus_exited" from="HSplitContainer/TextureButton2" to="HSplitContainer/TextureButton2" method="_on_TextureButton_focus_exited"]
